Reviewed by Oliver.

Working on: http://bugs.webkit.org/show_bug.cgi?id=17779 (SVG 1.1 Errata demands "SVG JavaScript Liveness" support)

Splitting up large patch in small chunk: Land valueAsString() implementation on it's own.

Added valueAsString() conversion for all SVG primitive types, needed by the SVG<->XML synchronization layer.
Unify "null value for a SVG animated type" concept, which was implemented in SVGDocumentExtensions before, in SVGAnimatedTemplate.


git-svn-id: svn://svn.chromium.org/blink/trunk@35034 bbb929c8-8fbe-4397-9dbb-9b2b20218538