third_party/WebKit/WebCore/svg/SVGDocumentExtensions.h
@@ -1,7 +1,7 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 /*
     Copyright (C) 2006 Apple Computer, Inc.
-                  2006 Nikolas Zimmermann <zimmermann@kde.org>
+                  2006, 2008 Nikolas Zimmermann <zimmermann@kde.org>
 
     This file is part of the WebKit project
 
@@ -25,29 +25,24 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #define SVGDocumentExtensions_h
 
 #if ENABLE(SVG)
-
 #include <memory>
-#include <wtf/Forward.h>
+
 #include <wtf/HashSet.h>
 #include <wtf/HashMap.h>
 
-#include "FloatRect.h"
 #include "StringHash.h"
 #include "StringImpl.h"
-#include "AtomicString.h"
+#include "SVGAnimatedTemplate.h"
 
 namespace WebCore {
 
-class AtomicString;
 class Document;
 class EventListener;
 class Node;
 class String;
-class SVGElement;
 class SVGElementInstance;
 class SVGStyledElement;
 class SVGSVGElement;
-class TimeScheduler;
 
 class SVGDocumentExtensions {
 public:
@@ -104,7 +99,7 @@ public:
         if (propertyMap)
             return propertyMap->get(propertyName.impl());
 
-        return 0;
+        return SVGAnimatedTypeValue<ValueType>::null();
     }
 
     template<typename ValueType>
@@ -140,52 +135,7 @@ public:
     }
 };
 
-// Special handling for WebCore::String
-template<>
-inline String SVGDocumentExtensions::baseValue<String>(const SVGElement* element, const AtomicString& propertyName) const
-{
-    HashMap<StringImpl*, String>* propertyMap = baseValueMap<String>()->get(element);
-    if (propertyMap)
-        return propertyMap->get(propertyName.impl());
-
-    return String();
-}
-
-// Special handling for WebCore::FloatRect
-template<>
-inline FloatRect SVGDocumentExtensions::baseValue<FloatRect>(const SVGElement* element, const AtomicString& propertyName) const
-{
-    HashMap<StringImpl*, FloatRect>* propertyMap = baseValueMap<FloatRect>()->get(element);
-    if (propertyMap)
-        return propertyMap->get(propertyName.impl());
-
-    return FloatRect();
-}
-
-// Special handling for booleans
-template<>
-inline bool SVGDocumentExtensions::baseValue<bool>(const SVGElement* element, const AtomicString& propertyName) const
-{
-    HashMap<StringImpl*, bool>* propertyMap = baseValueMap<bool>()->get(element);
-    if (propertyMap)
-        return propertyMap->get(propertyName.impl());
-
-    return false;
-}
-
-// Special handling for doubles
-template<>
-inline double SVGDocumentExtensions::baseValue<double>(const SVGElement* element, const AtomicString& propertyName) const
-{
-    HashMap<StringImpl*, double>* propertyMap = baseValueMap<double>()->get(element);
-    if (propertyMap)
-        return propertyMap->get(propertyName.impl());
-
-    return 0.0;
-}
-
 }
 
 #endif // ENABLE(SVG)
-
 #endif
